fix(processor): 修复记录类型编解码字段注入的位置处理问题
- 引入 JCBlock 导入以支持静态初始化块处理
- 重构位置重置逻辑为 anchorPositions 方法，将节点位置锚定到目标类位置而非重置为 NOPOS
- 修复记录类型的静态初始化块注入，确保字段声明和赋值顺序正确
- 为无初始化器的字段应用位置锚定，避免流程分析错误
- 移除 Gradle 插件中的源集注册，简化构建配置
- 重构 decuminum 任务以支持完整编译过程并正确处理记录语法
- 添加 JavaWorkaround 类以绕过模块系统限制并动态导出内部包
- 实现记录类型的特殊打印逻辑，跳过合成成员并正确显示记录头结构